--- a/src/amaranth/digits.ipynb
+++ b/src/amaranth/digits.ipynb
@@ -373,7 +373,7 @@
     "import tqdm\n",
     "correct = 0\n",
     "for i, (x, y) in tqdm.tqdm(enumerate(zip(X_test, y_test)), total=len(X_test)):\n",
-    "    res = test(x, root, str(y)+\"_\"+str(i))\n",
+    "    res = test(x, root, \"vcdTest/\"+str(y)+\"_\"+str(i))\n",
     "    y_ = clf.predict([x])[0]\n",
     "    if res == y:\n",
     "        correct += 1\n",
