--- a/src/amaranth/digits.ipynb
+++ b/src/amaranth/digits.ipynb
@@ -53,7 +53,7 @@
     }
    ],
    "source": [
-    "# split teh data into individual samples\n",
+    "# split the data into individual samples\n",
     "# data is in the shape of label followed by 5 lines of values\n",
     "samples = []\n",
     "for i in range(0, len(data), 7):\n",
@@ -87,12 +87,10 @@
     "    if len(label)!=1 or len(values)<5:\n",
     "        continue\n",
     "    l = int(label)\n",
-    "    # convert matrix of strings to boolean matrix (.->0 and x->1)\n",
     "    values = [[1 if c == 'x' else 0 for c in row.strip()] for row in values]\n",
     "    dataset.append((l, values))\n",
     "\n",
-    "print(len(dataset))\n",
-    "print(dataset[0])"
+    "print(len(dataset))"
    ]
   },
   {
@@ -145,9 +143,6 @@
     "X = [list(np.array(values).astype(bool).reshape(-1)) for label, values in dataset]\n",
     "y = [label for label, values in dataset]\n",
     "\n",
-    "# X = np.array(X).astype(bool)\n",
-    "# y = np.array(y).astype(int)\n",
-    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "print(len(X_train), len(X_test))"
@@ -191,12 +186,8 @@
     "print(\"train score\", clf.score(X_train, y_train))\n",
     "print(\"test score\", (clf.score(X_test, y_test)))\n",
     "\n",
-    "# print the number of nodes in the tree\n",
     "print(f\"Number of nodes in the tree: {clf.tree_.node_count}\")\n",
-    "# print the depth of the tree\n",
     "print(f\"Depth of the tree: {clf.tree_.max_depth}\")\n",
-    "# print the tree structure\n",
-    "print(clf.tree_)\n",
     "\n",
     "\n",
     "# plot the tree\n",
@@ -266,53 +257,6 @@
     "feature = clf.tree_.feature\n",
     "threshold = clf.tree_.threshold\n",
     "values = clf.tree_.value\n",
-    "\n",
-    "node_depth = np.zeros(shape=n_nodes, dtype=np.int64)\n",
-    "is_leaves = np.zeros(shape=n_nodes, dtype=bool)\n",
-    "stack = [(0, 0)]  # start with the root node id (0) and its depth (0)\n",
-    "# while len(stack) > 0:\n",
-    "#     # `pop` ensures each node is only visited once\n",
-    "#     node_id, depth = stack.pop()\n",
-    "#     node_depth[node_id] = depth\n",
-    "\n",
-    "#     # If the left and right child of a node is not the same we have a split\n",
-    "#     # node\n",
-    "#     is_split_node = children_left[node_id] != children_right[node_id]\n",
-    "#     # If a split node, append left and right children and depth to `stack`\n",
-    "#     # so we can loop through them\n",
-    "#     if is_split_node:\n",
-    "#         stack.append((children_left[node_id], depth + 1))\n",
-    "#         stack.append((children_right[node_id], depth + 1))\n",
-    "#     else:\n",
-    "#         is_leaves[node_id] = True\n",
-    "\n",
-    "# print(\n",
-    "#     \"The binary tree structure has {n} nodes and has \"\n",
-    "#     \"the following tree structure:\\n\".format(n=n_nodes)\n",
-    "# )\n",
-    "# for i in range(n_nodes):\n",
-    "#     if is_leaves[i]:\n",
-    "#         print(\n",
-    "#             \"{space}node={node} is a leaf node with value={value}.\".format(\n",
-    "#             # \"{space}node={node} is a leaf node  {value}\".format(\n",
-    "#                 space=node_depth[i] * \"\\t\", node=i, value=np.argmax(values[i])\n",
-    "#             )\n",
-    "#         )\n",
-    "#     else:\n",
-    "#         print(\n",
-    "#             \"{space}node={node} is a split node with value={value}: \"\n",
-    "#             # \"{space}node={node} \"\n",
-    "#             \"go to node {left} if X[:, {feature}] <= {threshold} \"\n",
-    "#             \"else to node {right}.\".format(\n",
-    "#                 space=node_depth[i] * \"\\t\",\n",
-    "#                 node=i,\n",
-    "#                 left=children_left[i],\n",
-    "#                 feature=feature[i],\n",
-    "#                 threshold=threshold[i],\n",
-    "#                 right=children_right[i],\n",
-    "#                 value=values[i],\n",
-    "#             )\n",
-    "#         )\n",
     "\n",
     "def build_hdl_tree(tree, node_id=0):\n",
     "    if tree.children_left[node_id] == tree.children_right[node_id]:\n",
@@ -386,18 +330,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {
-    "metadata": {}
-   },
-   "outputs": [],
-   "source": [
-    "#generate verilog code\n",
-    "# generate_verilog(root, \"../tree.v\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 100,
    "metadata": {
     "metadata": {}
@@ -413,14 +345,6 @@
     }
    ],
    "source": [
-    "%reload_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "index = 2\n",
-    "x_ = X_test[index]\n",
-    "y_ = y_test[index]\n",
-    "print(x_)\n",
-    "print(y_)\n",
     "test_IO_Block(x_, \"vcdTest/io_block\"+str(y_))"
    ]
   },
@@ -463,7 +387,6 @@
     "        correct += 1\n",
     "    except Exception as e:\n",
     "        print(e)\n",
-    "        print(\"Test failed\")\n",
     "        print(f\"Test failed for {y}\")\n",
     "print(f\"Accuracy: {correct/len(X_test)}\")\n"
    ]
@@ -514,7 +437,6 @@
     "        correct += 1\n",
     "    except Exception as e:\n",
     "        print(e)\n",
-    "        print(\"Test failed\")\n",
     "        print(f\"Test failed for {y}\")\n",
     "print(f\"Accuracy: {correct/len(X_test)}\")\n"
    ]
